@@ -8,6 +8,6 @@
 }
 
 #dashboard .favourite-item .title {
-    width:93%;
+    width:89%;
     display:inline-block;
 }
