@@ -6,7 +6,8 @@ Changelog
 3.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Rename favourites on the dashboard.
+  [mbaechtold]
 
 
 3.1.2 (2014-07-11)
